projects page added

--- a/public/help.html
+++ b/public/help.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Help Page</title>
-    </head>
-    <body>
-        <h1>Help page</h1>
-        <p>Some garbadge text</p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Help Page</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: #f1f1f1;
+            padding: 20px;
+            font-family: Arial;
+        }
+
+        /* Center website */
+        .main {
+            max-width: 1000px;
+            margin: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Help page</h1>
+    <hr>
+    <p>Some garbadge text</p>
+</body>
+
 </html>
